syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Backplane";
package CecoChat.Contracts.Backplane;

enum MessageType {
  DATA = 0;
  DISCONNECT = 1;
  DELIVERY = 2;
  REACTION = 3;
}
